fix overflow text issue

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header {
   text-align: center;
   position: absolute;
   bottom: 15%;
-  height: auto;
+  height: 7rem;
   width: 100%;
   z-index: 1;
   padding: 1rem 4rem;
@@ -157,8 +157,6 @@ header {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  font-family: 'Barlow';
- 
 }
 
 .testimonial-cards {
@@ -166,7 +164,9 @@ header {
   align-items: center;
   flex-direction: row;
 }
-
+.lineHeight {
+  line-height: 1.7rem;
+}
 .card {
   padding: 1rem;
   height: 25rem;
